Production/Production/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Broadband_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadband Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TV_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voice_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voice Status</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Broadband_Status__c</columns>
        <columns>Mobile_Status__c</columns>
        <columns>TV_Status__c</columns>
        <columns>Voice_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Broadband_Status__c</columns>
        <columns>Mobile_Status__c</columns>
        <columns>TV_Status__c</columns>
        <columns>Voice_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Broadband_Status__c</columns>
        <columns>Mobile_Status__c</columns>
        <columns>TV_Status__c</columns>
        <columns>Voice_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>TalkTalk_Account</fullName>
        <active>true</active>
        <label>TalkTalk Account</label>
    </recordTypes>
</CustomObject>